# USTC-2023-Algorithm-Labs

./: README.md
Lab1/: PB21030794-王道宇-第一次实验.md
Lab1/data/: data.txt
Lab1/report/: 算法第一次实验.md
Lab1/sort_c/: qsort_arr.c  sort_arr.c  template_sort.c
Lab1/sort_cpp/: qsort_arr.cpp
Lab1/src/: qsort.c
Lab2/: ClosestPointPair.cpp  算法第二次实验.md
Lab2/data/: data.txt
Lab3/: RBT.cpp  算法第三次实验.md
Lab3/data/: insert.txt
Lab3/src/: RBT.cpp
Lab4/data/: insert.txt
Lab4/report/: 算法第四次实验实验报告.md
Lab4/src/: IntervalTree.cpp  IntervalTree.h
Lab5/data/: data.txt
Lab5/report/: 算法第五次实验实验报告.md
Lab5/src/: LCS.cpp
Lab6/: CMakeLists.txt
Lab6/data/: orignal.txt  table.txt
Lab6/report/: 算法第六次实验实验报告.md
Lab6/src/: Huffman.cpp  Huffman.h  main.cpp
Lab7/: CMakeLists.txt
Lab7/data/: test1.txt  test2.txt  test3.txt
Lab7/src/: Schedule.cpp  Schedule.h  main.cpp
Lab8/: CMakeLists.txt
Lab8/data/: data.txt
Lab8/report/: 算法第八次实验实验报告.md
Lab8/src/: BFS.cpp  SparseMatrix.cpp  SparseMatrix.h  main.cpp
data/: sorted.txt
sort_cpp/: qsort_vector.cpp
